feat: native plugin interface
Signed-off-by: Sam Gammon <sam@elide.ventures>